--- a/banking-app-frontend-v2/package.json
+++ b/banking-app-frontend-v2/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "firebase": "^9.17.2",
     "framer-motion": "^11.3.17",
     "postcss": "^8.4.40",
